example/compilation/errors/semantic/func_proc/redefined.arn


func main() -> int {
    return 0;
}

func main() -> int {
    return 0;
}

proc main() {
}